--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     implementation 'ca.antonious:materialdaypicker:0.7.2'
     implementation 'com.github.antonKozyriatskyi:CircularProgressIndicator:1.3.0'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.1.1'
 }
